# aws-streamer

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  MANIFEST.in  NOTICE  README.md  build.sh  requirements.txt  setup.py
awstreamer/: CMakeLists.txt  __init__.py
awstreamer/gst_configurer/: README.md  configurer_client.py
awstreamer/gst_configurer/templates/: new_config.json  new_request.json
awstreamer/gst_metadata/: gst_objects_info_meta.c
awstreamer/gst_pipeline/: appsrc_pipeline.py  cmd_pipeline.py  cv_pipeline.py  ds_pipeline.py  dvr_pipeline.py  pipeline_factory.py  stream_client.py  stream_config.py  stream_graph.py  stream_pipeline.py
awstreamer/gst_plugins/cvmlfilter/: ImageProcessor.h
awstreamer/gst_plugins/dlr/: get_dlr.sh
awstreamer/gst_plugins/mxnet/: CMakeLists.txt  get_mxnet.sh
awstreamer/gst_plugins/mxnet/src/: common.hpp  gstmxnet.h
awstreamer/gst_plugins/python/: gaussian_blur.py  metadata_test.py  neodlr.py
awstreamer/gst_python/: get_gst_python.sh
awstreamer/gst_viewer/: __init__.py  viewer_client.py
awstreamer/gst_viewer/templates/: index.html
awstreamer/utils/: aws.py  gst.py  video.py
examples/buffer/: get.py
examples/configs/: concat_videos.json  deepstream_display.json  deepstream_hls.json  ecs_task.json  filesrc_display.json  opencv_display.json  opencv_hls.json  opencv_video.json  rtspsrc_display.json  testsrc_display.json  testsrc_dvr.json  testsrc_kvs.json  testsrc_webrtc.json  usb_hls.json
examples/deepstream/: inference_numeric.py
examples/dlr/: inference.py
examples/greengrass/: README.md  cloudformation.yml  deploy_group.sh  deploy_stack.sh
examples/greengrass/doc/: Video Streaming.drawio  Video_Streaming_CVML_Pipeline.drawio
examples/greengrass/src/: README.md  apigw_template.yml  greengrass_template.yml  requirements.txt
examples/greengrass/src/create_thing/: app.py
examples/greengrass/src/data_uploader/: README.md  config.json  data_handler.py  lambda_function.py  request.json
examples/greengrass/src/group_deployment_reset/: app.py
examples/greengrass/src/gstreamer_pipeline/: README.md  lambda_function.py
examples/greengrass/src/viewer/: README.md  lambda_function.py  requirements.txt
examples/greengrass/src/viewer/examples/configs/: config.json  demo.json  nvinfer_config.txt  rtspsrc_dvr.json  rtspsrc_hls.json  rtspsrc_kvs.json  testsrc_display.json  testsrc_hls.json  testsrc_kvs.json  testsrc_python.json
examples/greengrass/tools/: deploy_local.sh  deploy_local_all.sh  get_awssdk.sh  get_device_certs.sh  log.sh  publish_lambda.sh  publish_lambda_all.sh
examples/misc/: appsink.py  merge.py
examples/opencv/: img_proc.py
examples/serverless/: Makefile  README.md  deploy.js  run.py  run.sh
examples/serverless/doc/: Serverless_Video_Streaming_Pipeline.drawio
examples/serverless/src/: index.js
examples/serverless/templates/: cloudformation.yml
examples/test_app/: app.py
examples/viewer/: app.py
gstaws/: CMakeLists.txt  client.py
gstaws/gst_configurer/templates/: index.html
gstaws/gst_metadata/: CMakeLists.txt  gst_objects_info_meta.h  gst_objects_info_meta.py
gstaws/gst_pipeline/: pipeline_factory.py  stream_client.py  stream_graph.py  stream_pipeline.py  video_pipeline.py
gstaws/gst_plugins/cvmlfilter/: CMakeLists.txt  ImageProcessor.cpp  gstcvmlfilter.cpp  gstcvmlfilter.h
gstaws/gst_plugins/dlr/: get_dlr.sh
gstaws/gst_plugins/mxnet/src/: ImageProcessor.cpp  ImageProcessor.h  gstmxnet.cpp
gstaws/gst_plugins/python/: osd.py
gstaws/gst_viewer/: README.md
gstaws/utils/: plugin.py
